# khushu-id

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  meson.build  meson.options
.github/workflows/: ci.yml  release.yml
data/: io.github.sniper1720.khushu.desktop.in  io.github.sniper1720.khushu.service.in  khushu.gresource.xml  meson.build
data/appdata/: io.github.sniper1720.khushu.metainfo.xml.in
data/fonts/: meson.build
data/icons/: meson.build
data/quran/: ar.json  chapters.json  hizbs.json  juzs.json  manzils.json  pages_index.json  quran_pages_index.json  sajdas.json
data/quran/translations/: id.json
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  rules
packaging/flatpak/: io.github.sniper1720.khushu.yml
packaging/rpm/: khushu.spec  prepare_source.sh
po/: LINGUAS  POTFILES.in  ar.po  es.po  fr.po  gtk40.ar.po  gtk40.es.po  gtk40.fr.po  gtk40.id.po  gtk40.pot  gtk40.tr.po  id.po  khushu.pot  libadwaita.ar.po  libadwaita.es.po  libadwaita.fr.po  libadwaita.id.po  libadwaita.pot  libadwaita.tr.po  meson.build  tr.po
snap/: snapcraft.yaml
src/: adkar.rs  audio.rs  autostart.rs  background.rs  background_tasks.rs  calendar.rs  config.rs  home_ui.rs  i18n.rs  location.rs  main.rs  mawaqit.rs  meson.build  nav_ui.rs  notifications.rs  pages.rs  platform.rs  qibla.rs  qibla_ui.rs  quran.rs  settings_ui.rs  time.rs  timer_controller.rs  welcome.rs
tests/: language.rs  prayer_times.rs  quran.rs  ui.rs
tests/common/: mod.rs
