[package]
name = "khushu"
version = "1.0.1"
authors = ["Djalel Oukid <sniper1720@linuxtechmore.com>"]
edition = "2024"
license = "GPL-3.0-or-later"
description = "An all-in-one Muslim app for Linux."
homepage = "https://github.com/sniper1720/khushu"
repository = "https://github.com/sniper1720/khushu"

[dependencies]
chrono = "0.4"
gtk4 = { version = "0.9", features = ["v4_10"] }
ksni = "0.3"
libadwaita = { version = "0.7", features = ["v1_5"] }
rodio = "0.21"
salah = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
notify-rust = "4.12"
base64 = "0.22"
hijri_date = "0.5"
zbus = "5.13"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
pangocairo = "0.20"
ashpd = { version = "0.12", features = ["tokio"] }
futures-util = "0.3"

[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
glib-build-tools = "0.22"
